RESOLVED FIXED310348
WebGL: timer queries make the result available in wrong ScriptExecutionContext
https://bugs.webkit.org/show_bug.cgi?id=310348
Summary WebGL: timer queries make the result available in wrong ScriptExecutionContext
Kimmo Kinnunen
Reported 2026-03-20 04:52:19 PDT
WebGL: timer queries make the result available in wrong ScriptExecutionContext
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-20 04:52:26 PDT
Kimmo Kinnunen
Comment 2 2026-03-20 04:56:51 PDT
EWS
Comment 3 2026-03-23 02:36:04 PDT
Committed 309744@main (96452b6bf481): <https://commits.webkit.org/309744@main> Reviewed commits have been landed. Closing PR #60997 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.